# Coursera_algorithms_I

./: README.md
Week1/: BinarySearch.cpp  BinarySearch.h  BitonicArray.cpp  DynamicConnectivity.cpp  Percolation.cpp  Percolation.h  PercolationMain.cpp  PercolationStats.cpp  PercolationStats.h  QuickFind.cpp  QuickFind.h  RowColumn.cpp  RowColumn.h  ThreeSum.cpp  Threshold.h  UniformInt.h  UnionFind.h  UniqueShuffledInt.h  WQUPC.cpp  WQUPC.h
Week2/: BidirectionalLinkedList.h  BidirectionalLinkedListIt.h  BidirectionalLinkedListMain.cpp  IstreamIteratorTest.cpp  Queue.h  QueueApi.cpp  QueueLinkedList.h  QueueResizeArray.h  RandomizedQueue.h  RandomizedQueueApi.cpp  RandomizedQueueNext.h  Stack.h  StackApi.cpp  StackArray.h  StackLinkedList.h  StackLinkedListIt.h  StackResizeArray.h  Vector.h  VectorApi.cpp
Week2/sort/: CountIntersectionSets.cpp  DutchFlag.cpp  InsertionSort.h  InsertionSortApi.cpp  Point.cpp  Point.h  ShellSort.h
Week2/vector_list_queue_stack/: BidirectionalLinkedList.h  BidirectionalLinkedListMain.cpp  Queue.h  QueueLinkedList.h  QueueResizeArray.h  RandomIntGenerator.cpp  RandomIntGenerator.h  RandomizedQueue.h  RandomizedQueueApi.cpp  RandomizedQueueNext.h  StackApi.cpp  StackArray.h  StackLinkedList.h  StackLinkedListIt.h  StackLinkedListItApi.cpp  StackResizeArray.h  Vector.h  VectorApi.cpp
Week3/: BottomUpMergeSort.h  InsertionSort.h  Merge.h  MergeMain.cpp  MergeSort.h  NthElement.h  NthElementMain.cpp  Partition.h  PartitionTest.cpp  QuickSort.h  QuickSortMain.cpp
Week3/colinear_points/: CMakeLists.txt  Draw.cpp  Draw.h  Line2D.h  Point2D.cpp  Point2D.h  main.cpp  openGLMain.cpp
Week3/collinear_points/: BottomUpMergeSort.h  Brute Force Strategy  BruteCollinearPoints.cpp  BruteCollinearPoints.h  CMakeLists.txt  Draw.cpp  Draw.h  Fast Strategy  FastCollinearPoints.cpp  FastCollinearPoints.h  Group4Points2D.cpp  Group4Points2D.h  Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  ReadInput.cpp  ReadInput.h  conanfile.txt  main.cpp
Week3/inplace_merge/: CMakeLists.txt
Week3/inplace_merge/src/: InplaceMerge.h
Week3/inplace_merge/test/: InplaceMergeTest.cpp
Week3/questions/: CMakeLists.txt  ShuffleForwardList.cpp
Week4/: BinaryHeap.h  BinarySearchNode.h  BinarySearchNodes.h  BinarySearchTree.h  BinarySearchTreeIt.h  BinarySearchTreeMain.cpp  CMakeLists.txt  Constructor.cpp  PriorityQueue.h  PriorityQueueMain.cpp  Range.h
Week4/puzzle/: Board.cpp  Board.h  BoardMain.cpp  CMakeLists.txt  CountInversions.h  Priority.h  SearchNode.cpp  SearchNode.h  SearchNodeData.cpp  SearchNodeData.h  SearchNodeFactory.cpp  SearchNodeFactory.h  SearchNodeHamming.cpp  SearchNodeHamming.h  SearchNodeManhattan.cpp  SearchNodeManhattan.h  Solver.cpp  Solver.h  main.cpp  puzzle-unsolvable3x3.txt  puzzle20.txt  puzzle29.txt  puzzle33.txt  puzzle4x4-10.txt  puzzle4x4-80.txt
Week5/: OrthogonalLineSegment.cpp  OrthogonalLineSegment.h  Point.cpp  Point.h  SweepLine.cpp  SweepLine.h  SweepLineMain.cpp  VerticalLineYy.h
Week5/interval_tree/: CMakeLists.txt  IntervalTree.cpp  IntervalTree.h  SweepLineRectangle.cpp  SweepLineRectangle.h  main.cpp
Week5/kdtree/: KdTree.h  KdTreeMain.cpp
Week5/red_black_tree/: CMakeLists.txt  Optional.h  RedBlackTree.h  main.cpp
Week5/sweep_line/: Event.cpp  Event.h  IntersectOrthogonalLines.cpp  (+1 more)
Week6/: CMakeLists.txt  HashTable.h  main.cpp
(+2 files in other folders)
